metadata/force-app/main/default/objects/agf__ADM_Work_Manager_User_Preferences__c/fields/agf__Columns__c.field-meta.xml
<CustomField>
    <fullName>agf__Columns__c</fullName>
    <label>Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>