metadata/force-app/main/default/objects/agf__ADM_Work_Manager_User_Preferences__c/fields/agf__Reorder_Field__c.field-meta.xml
<CustomField>
    <fullName>agf__Reorder_Field__c</fullName>
    <label>Reorder Field</label>
    <type>TextArea</type>
</CustomField>