metadata/force-app/main/default/objects/agf__ADM_Work_Manager_User_Preferences__c/fields/agf__Show_Velocity_Line__c.field-meta.xml
<CustomField>
    <fullName>agf__Show_Velocity_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Velocity Line</label>
    <type>Checkbox</type>
</CustomField>