metadata/force-app/main/default/objects/agf__ADM_Work_Manager_User_Preferences__c/fields/agf__Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>agf__Sort_Direction__c</fullName>
    <label>Sort Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>asc</fullName>
                <default>true</default>
                <label>asc</label>
            </value>
            <value>
                <fullName>desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>