metadata/force-app/main/default/objects/agf__ADM_Work_Manager_User_Preferences__c/fields/agf__Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Work_Manager_User_Settings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>